Improve Docker deployment setup
Make deployments better by separating the db and data into two separate
volumes. That way, the data volume can be deleted whenever there are
data updates without affecting the db.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     volumes:
       - ./credentials.json:/home/nadeko/app/credentials.json:ro
       - nadeko-data:/home/nadeko/app/data
+      # Underscore to prevent accidental deletion
+      - _nadeko-db:/home/nadeko/app/db/
     environment:
       NadekoBot_RedisOptions: redis,name=nadeko
       NadekoBot_ShardRunCommand: dotnet
@@ -21,3 +23,4 @@ services:
 
 volumes:
   nadeko-data:
+  _nadeko-db:
