Expose redis ports for local development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     image: redis:alpine
     sysctls:
       net.core.somaxconn: 511
+    ports:
+      - "6379:6379/tcp"
 
 volumes:
   nadeko-data:
